server/routerlicious/kubernetes/agents/minio-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: minio
 namespace: default
 annotations:
   kubernetes.io/ingress.class: "nginx-prod"
   ingress.kubernetes.io/ssl-redirect: "true"
spec:
 tls:
 - hosts:
   - "minio.wu2.prague.office-int.com"
   secretName: wu2-tls-certificate
 rules:
 - host: "minio.wu2.prague.office-int.com"
 http:
     paths:
     - path: /
       backend:
         serviceName: agents-storage-minio
         servicePort: 9000
